infrastructure/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bss-oss
  labels:
    app.kubernetes.io/part-of: yemenptc-bss
    istio-injection: enabled
